# flake8-logging

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  setup.cfg
requirements/: py310.txt  py311.txt  py312.txt  py38.txt  py39.txt  requirements.in
src/flake8_logging/: __init__.py
tests/: test_flake8_logging.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt  requirements.in
