[metadata]
name = flake8_logging
version = 1.4.0
description = A Flake8 plugin that checks for issues using the standard library logging module.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/flake8-logging
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = flake8
project_urls =
    Changelog = https://github.com/adamchainz/flake8-logging/blob/main/CHANGELOG.rst
    Funding = https://adamj.eu/books/
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    flake8!=3.2.0,>=3.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
flake8.extension =
    L = flake8_logging:Plugin

[coverage:run]
branch = True
parallel = True
source =
    flake8_logging
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
